--- a/themes/default.css
+++ b/themes/default.css
@@ -1,1 +1,157 @@
-@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:700|Alegreya:400,500i,800");*{box-sizing:border-box}html,body{width:100%;height:100%;margin:0;padding:0}body{font-family:"Alegreya",serif;font-size:16pt;font-weight:400;color:#333}h1,h2{margin:0px;padding:0px}h2{font-family:"Alegreya Sans",sans-serif}h2 a{color:#333}a{text-decoration:none;color:#ec4e22}a:hover{border-bottom:1px solid #ec4e22}.reading-list{display:flex;flex-direction:column;align-items:center;min-height:100%}.reading-list__header{display:flex;flex-direction:column;flex-shrink:0;align-items:center;width:100%;font-weight:800}.reading-list__header .title{margin-top:25px;font-family:"Alegreya",serif;font-size:3rem;color:#87a23a}.reading-list__header .subtitle{margin-top:-5px;font-family:"Alegreya",serif;font-size:1.75rem}.header__hero-image{height:100px;width:100%;background-color:#87a23a}.header__avatar-image{height:150px;width:150px;margin-top:-75px;border-radius:75px;box-shadow:0 0 30px rgba(0,0,0,0.5);background-color:white;background-image:url("avatar.jpg");background-position:center;background-size:cover}.reading-list__content{display:flex;flex-direction:column;flex-grow:1;width:60%;margin-top:25px}.reading-list__year-list{display:none}.reading-list__year{margin-top:15px}.reading-list__year:first-of-type{margin-top:30px}.reading-list__year h2{font-size:1.75rem}.book-list__book{margin-bottom:5px}.book-list__title{font-weight:500;font-style:italic}.reading-list__footer{display:flex;align-items:center;flex-shrink:0;width:100%;height:50px;font-family:"Alegreya Sans",sans-serif;margin-top:50px;padding-left:20px;background-color:#ec4e22;font-size:0.85rem;color:#fbcb3c}.reading-list__footer a{color:#fbcb3c;margin:0 0 -1px 3px}.reading-list__footer a:hover{margin-bottom:-2px;border-bottom:1px solid #fbcb3c}@media (max-width: 1024px){.reading-list__content{width:70%}body{font-size:14pt}}@media (max-width: 375px){.header__hero-image{height:60px}.header__avatar-image{height:75px;width:75px;margin-top:-40px}.reading-list__content{width:80%}.reading-list__year h2{font-size:1.25rem}.reading-list__header h2{margin-top:0px;font-size:1.3rem}body{font-size:12pt}h1{font-size:1.75rem}}
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:700|Alegreya:400,500i,800');
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: 'Alegreya', serif;
+  font-size: 16pt;
+  font-weight: 400;
+  color: #333;
+}
+h1,
+h2 {
+  margin: 0px;
+  padding: 0px;
+}
+h2 {
+  font-family: 'Alegreya Sans', sans-serif;
+}
+h2 a {
+  color: #333;
+}
+a {
+  text-decoration: none;
+  color: #ec4e22;
+}
+a:hover {
+  border-bottom: 1px solid #ec4e22;
+}
+.reading-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+}
+.reading-list__header {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  align-items: center;
+  width: 100%;
+  font-weight: 800;
+}
+.reading-list__header .title {
+  margin-top: 25px;
+  font-family: 'Alegreya', serif;
+  font-size: 3rem;
+  color: #87a23a;
+}
+.reading-list__header .subtitle {
+  margin-top: -5px;
+  font-family: 'Alegreya', serif;
+  font-size: 1.75rem;
+}
+.header__hero-image {
+  height: 100px;
+  width: 100%;
+  background-color: #87a23a;
+}
+.header__avatar-image {
+  height: 150px;
+  width: 150px;
+  margin-top: -75px;
+  border-radius: 75px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+  background-color: white;
+  background-image: url('avatar.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.reading-list__content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  width: 60%;
+  margin-top: 25px;
+}
+.reading-list__year-list {
+  display: none;
+}
+.reading-list__year {
+  margin-top: 15px;
+}
+.reading-list__year:first-of-type {
+  margin-top: 30px;
+}
+.reading-list__year h2 {
+  font-size: 1.75rem;
+}
+.book-list__book {
+  margin-bottom: 5px;
+}
+.book-list__title {
+  font-weight: 500;
+  font-style: italic;
+}
+.reading-list__footer {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  width: 100%;
+  height: 50px;
+  font-family: 'Alegreya Sans', sans-serif;
+  margin-top: 50px;
+  padding-left: 20px;
+  background-color: #ec4e22;
+  font-size: 0.85rem;
+  color: #fbcb3c;
+}
+.reading-list__footer a {
+  color: #fbcb3c;
+  margin: 0 0 -1px 3px;
+}
+.reading-list__footer a:hover {
+  margin-bottom: -2px;
+  border-bottom: 1px solid #fbcb3c;
+}
+@media (max-width: 1024px) {
+  .reading-list__content {
+    width: 70%;
+  }
+  body {
+    font-size: 14pt;
+  }
+}
+@media (max-width: 375px) {
+  .header__hero-image {
+    height: 60px;
+  }
+  .header__avatar-image {
+    height: 75px;
+    width: 75px;
+    margin-top: -40px;
+  }
+  .reading-list__content {
+    width: 80%;
+  }
+  .reading-list__year h2 {
+    font-size: 1.25rem;
+  }
+  .reading-list__header h2 {
+    margin-top: 0px;
+    font-size: 1.3rem;
+  }
+  body {
+    font-size: 12pt;
+  }
+  h1 {
+    font-size: 1.75rem;
+  }
+}
