--- a/themes/default.css
+++ b/themes/default.css
@@ -68,9 +68,7 @@ a {
 
   height: 120px;
   width: 120px;
-  /* border-radius: 60px; */
-  /* background-color: pink; */
-  background-image: url('avatar-reversed.png');
+  background-image: url('avatar.png');
   background-position: center;
   background-size: cover;
 }
