--- a/templates/default.pug
+++ b/templates/default.pug
@@ -7,7 +7,7 @@ html(lang="en")
     link(rel="stylesheet" href="styles.css")
 
     if meta.feed
-      link(rel="alternate" title=meta.feed.title ? meta.feed.title : 'JSON Feed' type="application/feed+json" href=meta.feed.url)
+      link(rel="alternate" title=meta.feed.title type="application/feed+json" href=meta.feed.url)
 
   body
     .reading-list
